# Frequen-C_backend

./: .gitignore  Procfile  README.rst  mypy.ini  pyproject.toml
.github/workflows/: main.yml
frequen_c_backend/: __init__.py  config.py
frequen_c_backend/blueprints/: __init__.py  test.py
tests/: test_frequen_c_backend.py
