[tool.poetry]
name = "Frequen-C_backend"
version = "0.1.0"
description = "Backend for the Frequen-C App"
authors = ["Josh Ricard <joshhrricard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.1"
black = "^21.11b1"
mypy = "^0.910"
isort = "^5.10.1"
pylint-flask-sqlalchemy = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
load-plugins = "pylint_flask_sqlalchemy"

[tool.pylint.typecheck]
ignored-classes = "scoped_session, relationship"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = "C0114, C0115, C0116, R0903"

[tool.isort]
profile = "black"
